[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono-humanize = "0.2.3"
counter = "0.5.7"
indexmap = "2.1.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
time-humanize = "0.1.3"
